Kubernetes/cart-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
      - name: cart-service
        image: mohamedelrefy20/cart-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9060
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: microservices
spec:
  selector:
    app: cart-service
  ports:
  - port: 9060
    targetPort: 9060
  type: ClusterIP
