Kubernetes/notification-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
      - name: notification-service
        image: mohamedelrefy20/notification-service:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9020
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: microservices
spec:
  selector:
    app: notification-service
  ports:
  - port: 9020
    targetPort: 9020
  type: ClusterIP
