Kubernetes/purely_cart_service.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: purely-cart-service
  namespace: microservices
spec:
  serviceName: "purely-cart-service"
  replicas: 1
  selector:
    matchLabels:
      app: purely-cart-service
  template:
    metadata:
      labels:
        app: purely-cart-service
    spec:
      containers:
      - name: purely-cart-service
        image: mongo:4.4
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: purely-cart-service-data
          mountPath: /data/db
  volumeClaimTemplates:
  - metadata:
      name: purely-cart-service-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: purely-cart-service
  namespace: microservices
spec:
  selector:
    app: purely-cart-service
  ports:
  - port: 27017
    targetPort: 27017
  type: ClusterIP
